[gd_scene load_steps=14 format=3 uid="uid://dg1hplh4vtyyd"]

[ext_resource type="Script" path="res://scenes/new start scene/menu.gd" id="1_rb5ok"]
[ext_resource type="Theme" uid="uid://7fastx4ccd4k" path="res://main_theme.tres" id="2_umyxd"]
[ext_resource type="Texture2D" uid="uid://dph0uc6l2dwms" path="res://sprites/Start.png" id="3_sop4e"]
[ext_resource type="PackedScene" uid="uid://bjxr0iep468t3" path="res://scenes/falling objects/new_asteroid.tscn" id="4_243y7"]
[ext_resource type="PackedScene" uid="uid://cn26jqfqdu51d" path="res://scenes/player scene/destruction_particles.tscn" id="5_l4p10"]
[ext_resource type="PackedScene" uid="uid://bdcsnat8226eu" path="res://scenes/game background parallax/background.tscn" id="6_bys3q"]
[ext_resource type="PackedScene" uid="uid://6xfubrtyfw2b" path="res://scenes/particles scene/particle_static.tscn" id="6_sosn0"]
[ext_resource type="Texture2D" uid="uid://dxud6s6gyxkfa" path="res://sprites/SoundNo.png" id="8_qgy6x"]
[ext_resource type="Texture2D" uid="uid://c1jubiu2oh8dv" path="res://sprites/SoundYes.png" id="9_olyrh"]
[ext_resource type="Texture2D" uid="uid://c2utefga2ub4w" path="res://sprites/LastStand2(1)(1).png" id="10_3nd8p"]
[ext_resource type="AudioStream" uid="uid://k4b6oucf8kqj" path="res://Sounds/Last Stand Main Menu - Music.wav" id="11_xof8e"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vef4e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_qgy6x")
}],
"loop": true,
"name": &"sound_off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_olyrh")
}],
"loop": true,
"name": &"sound_on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n0jnm"]
size = Vector2(80, 80)

[node name="Menu" type="Node"]
script = ExtResource("1_rb5ok")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMarginContainer" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="GridContainer/TopMarginContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/TopMarginContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("2_umyxd")
theme_override_font_sizes/font_size = 76
text = "LAST STAND"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="GridContainer/TopMarginContainer"]
layout_mode = 2
columns = 2

[node name="RightMarginContainer2" type="MarginContainer" parent="GridContainer/TopMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="GridContainer/TopMarginContainer/GridContainer/RightMarginContainer2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GridContainer/TopMarginContainer/GridContainer/RightMarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("2_umyxd")
bbcode_enabled = true
text = "[center][b]CONTROLS:[/b]
- A/D OR ARROWS TO CONTROL YOUR SHIP'S ROTATION
- W, UP ARROW OR SPACEBAR TO ACTIVATE BOOST
- ESC TO PAUSE

[b]HOW TO PLAY:[/b]
- AVOID ASTEROIDS
- SURVIVE FOR 3 MINUTES

[/center]"
fit_content = true

[node name="GridContainer" type="GridContainer" parent="GridContainer/TopMarginContainer/GridContainer/RightMarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
columns = 2

[node name="LeftRichTextLabel" type="RichTextLabel" parent="GridContainer/TopMarginContainer/GridContainer/RightMarginContainer2/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
bbcode_enabled = true
text = "[center]COLLECT [b]FUEL CANNISTERS[/b]
TO RESTORE FUEL

[img=42x68]res://scenes/fuel/NewFuelBarrel.png[/img][/center]"
fit_content = true

[node name="RightRichTextLabel" type="RichTextLabel" parent="GridContainer/TopMarginContainer/GridContainer/RightMarginContainer2/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
bbcode_enabled = true
text = "[center]COLLECT [b]WRENCH[/b] TO
REPLENISH YOUR SHIP'S HP

[img=51x61]res://scenes/health/NewWrench.png[/img][/center]"
fit_content = true

[node name="RightMarginContainer" type="MarginContainer" parent="GridContainer/TopMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BotMarginContainer" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer"]
layout_mode = 2
columns = 2

[node name="LeftMarginContainer2" type="MarginContainer" parent="GridContainer/BotMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="GridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2"]
layout_mode = 2

[node name="CreditsLabel" type="Label" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer"]
layout_mode = 2
theme = ExtResource("2_umyxd")
text = "CREDITS:"
horizontal_alignment = 1

[node name="ProducerCenterContainer" type="CenterContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProducerGridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProducerCenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6

[node name="ProducerLabel" type="Label" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProducerCenterContainer/ProducerGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = "Producer: "

[node name="FraserLinkButton" type="LinkButton" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProducerCenterContainer/ProducerGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = "Fraser"
uri = "https://www.linkedin.com/in/fraser-ibbotson-8b8a2a213/"

[node name="ProgrammerCenterContainer2" type="CenterContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgrammerGridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProgrammerCenterContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6

[node name="ProgrammerLabel" type="Label" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProgrammerCenterContainer2/ProgrammerGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = "Programmers: "

[node name="FodsLinkButton" type="LinkButton" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProgrammerCenterContainer2/ProgrammerGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = "fods"
uri = "https://fodss.itch.io/"

[node name="CommaLabel" type="Label" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProgrammerCenterContainer2/ProgrammerGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = ";"

[node name="KomatrLinkButton" type="LinkButton" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProgrammerCenterContainer2/ProgrammerGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = "komatr"
uri = "https://komatr.itch.io/"

[node name="CommaLabel2" type="Label" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProgrammerCenterContainer2/ProgrammerGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = ";"

[node name="LeviLinkButton" type="LinkButton" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ProgrammerCenterContainer2/ProgrammerGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = "Levi"
uri = "https://tewecske.itch.io/"

[node name="ArtCenterContainer" type="CenterContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ArtGridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ArtCenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="ArtLabel" type="Label" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ArtCenterContainer/ArtGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_umyxd")
text = "Art: "

[node name="ClayLinkButton" type="LinkButton" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/ArtCenterContainer/ArtGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("2_umyxd")
text = "Claytomesh"
uri = "https://claytomesh.artstation.com/"

[node name="MusicCenterContainer" type="CenterContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicGridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/MusicCenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="MusicLabel" type="Label" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/MusicCenterContainer/MusicGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_umyxd")
text = "Music/SFX: "

[node name="AntonLinkButton" type="LinkButton" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer2/GridContainer/MusicCenterContainer/MusicGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
text = "Antongiulio Giardino"
uri = "https://m3t4lp0w3r.itch.io/"

[node name="RightMarginContainer" type="MarginContainer" parent="GridContainer/BotMarginContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer/GridContainer/RightMarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GridContainer/BotMarginContainer/GridContainer/RightMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("2_umyxd")
bbcode_enabled = true
text = "[center][b]CONTROLS:[/b]
- A/D OR ARROWS TO CONTROL YOUR SHIP'S ROTATION
- W, UP ARROW OR SPACEBAR TO ACTIVATE BOOST
- ESC TO PAUSE

[b]HOW TO PLAY:[/b]
- AVOID ASTEROIDS
- SURVIVE FOR 3 MINUTES

[/center]"
fit_content = true

[node name="GridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer/GridContainer/RightMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
columns = 2

[node name="LeftRichTextLabel" type="RichTextLabel" parent="GridContainer/BotMarginContainer/GridContainer/RightMarginContainer/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
bbcode_enabled = true
text = "[center]COLLECT [b]FUEL CANNISTERS[/b]
TO RESTORE FUEL

[img=42x68]res://scenes/fuel/NewFuelBarrel.png[/img][/center]"
fit_content = true

[node name="RightRichTextLabel" type="RichTextLabel" parent="GridContainer/BotMarginContainer/GridContainer/RightMarginContainer/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_umyxd")
bbcode_enabled = true
text = "[center]COLLECT [b]WRENCH[/b] TO
REPLENISH YOUR SHIP'S HP

[img=51x61]res://scenes/health/NewWrench.png[/img][/center]"
fit_content = true

[node name="LeftMarginContainer" type="MarginContainer" parent="GridContainer/BotMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="GridContainer" type="GridContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 2

[node name="BotMarginContainer" type="MarginContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32

[node name="StartButton" type="Button" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer/GridContainer/BotMarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_umyxd")
icon = ExtResource("3_sop4e")
flat = true

[node name="TopMarginContainer" type="MarginContainer" parent="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GPUParticles2D" parent="." instance=ExtResource("5_l4p10")]
position = Vector2(-216, 152)

[node name="Node2D" parent="." instance=ExtResource("6_sosn0")]
position = Vector2(-223, 79)

[node name="RigidBody2D" parent="." instance=ExtResource("4_243y7")]
position = Vector2(-220, 310)

[node name="ParallaxBackground" parent="." instance=ExtResource("6_bys3q")]

[node name="MusicButton" type="Area2D" parent="."]
position = Vector2(854, 432)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MusicButton"]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_vef4e")
animation = &"sound_on"
autoplay = "sound_on"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MusicButton"]
position = Vector2(-1, -4)
shape = SubResource("RectangleShape2D_n0jnm")

[node name="Label" type="Label" parent="MusicButton"]
offset_left = -40.0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 39.0
theme = ExtResource("2_umyxd")
text = "MUSIC"
horizontal_alignment = 1

[node name="SFXButton" type="Area2D" parent="."]
position = Vector2(1006, 432)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SFXButton"]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_vef4e")
animation = &"sound_on"
autoplay = "sound_on"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SFXButton"]
position = Vector2(-1, -4)
shape = SubResource("RectangleShape2D_n0jnm")

[node name="Label" type="Label" parent="SFXButton"]
offset_left = -40.0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 39.0
theme = ExtResource("2_umyxd")
text = "SFX"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(961, 179)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_3nd8p")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_xof8e")
volume_db = -16.0
autoplay = true
bus = &"Music"

[connection signal="button_up" from="GridContainer/BotMarginContainer/GridContainer/LeftMarginContainer/GridContainer/BotMarginContainer/StartButton" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="MusicButton" to="." method="_on_music_button_mouse_entered"]
[connection signal="mouse_exited" from="MusicButton" to="." method="_on_music_button_mouse_exited"]
[connection signal="mouse_entered" from="SFXButton" to="." method="_on_sfx_button_mouse_entered"]
[connection signal="mouse_exited" from="SFXButton" to="." method="_on_sfx_button_mouse_exited"]
